--- a/src/Sections/Home/Projects.module.css
+++ b/src/Sections/Home/Projects.module.css
@@ -31,11 +31,10 @@
     max-height: 385px;
     max-width: 650px;
 
-
     grid-area: img;
 }
 
-.imgContainer > img {
+.imgContainer img {
     object-fit: cover;
     height: 100%;
     width: 100%;
@@ -47,7 +46,7 @@
     right: -20px;
     bottom: -40px;
 }
-.imgContainerMobile > img {
+.imgContainerMobile img {
     height: 100%;
 }
 
