--- a/src/Sections/Home/Projects.module.css
+++ b/src/Sections/Home/Projects.module.css
@@ -34,20 +34,23 @@
     grid-area: img;
 }
 
-.imgContainer img {
+.imgContainer img, .imgContainer span {
     object-fit: cover;
     height: 100%;
     width: 100%;
 }
 .imgContainerMobile {
     position: absolute;
-    height: 340px;
-    width: auto;
-    right: -20px;
-    bottom: -40px;
+    z-index: 1;
+    height: 320px;
+    width: 140px;
+    right: -0px;
+    bottom: -35px;
 }
-.imgContainerMobile img {
+.imgContainerMobile span img, .imgContainerMobile span {
     height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 .textContent {
@@ -102,9 +105,9 @@
     }
     .imgContainerMobile {
         position: absolute;
-        height: 200px;
-        width: auto;
-        right: -20px;
+        height: 215px;
+        width: 88px;
+        right: -0px;
         bottom: -35px;
     }
 
