--- a/src/Sections/Home/projects/Projects.module.css
+++ b/src/Sections/Home/projects/Projects.module.css
@@ -84,6 +84,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding-left: 30px;
+    color: var(--grayish-violet);
 }
 .links {
     display: grid;
