--- a/src/Sections/Home/About.module.css
+++ b/src/Sections/Home/About.module.css
@@ -36,8 +36,8 @@
 }
 
 .iconsContainer {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    display: flex;
+    justify-content: space-between;
 
     margin-top: 60px;
 }
